# weather-station

./: .gitignore  README.md  app.py  build.sh  env.example  flaskenv.example  index.js  package-lock.json  package.json  pyproject.toml  run.sh  test.js  wsgi.py
.github/workflows/: tests.yaml
js/: forecast.js  index.js  temperature_humidity_sensor.js  tomorrow_io.js
js-test/: sensor_spec.js  tomorrow_io_spec.js
lib/: forecast.py  sensors.py  services.py
static/: index.css  index.js
templates/: index.html
test/: test_forecast.py  test_sensors.py
test/fixtures/: tomorrow_forecast.json  weather_sensor.json
